discussion/kv_engine/177008/177008_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Create standalone unit test for GetRandomKey

There is something "strange" with the implementation of GetRandomKey
on the server as it seems to be a delay until the key gets available
after being stored on the server.

After storing a document you may immediately fetch it through a
call with get, but that doesn't seem to be the case with GetRandomKey
as I had to add a few retries until it got available.

Change-Id: Iaa0a2f76822bf4701c79ac65eaab6ca9fb0833a4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-04 04:12:51.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-04 04:59:33.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18574/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:206:30: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
                        std::this_thread::sleep_for(
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18574/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:206:30:
error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18574/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17727/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47335/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39787/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8246/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8345/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20807/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20459/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28840/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19681/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21449/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-07-06 08:48:47.000000000
MISMATCHED INLINE COMMENT
Line:1183, tests/testapp_serverless/metering_test.cc -> Leftover debug.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-07-06 09:14:36.000000000
MISMATCHED INLINE COMMENT
Line:1183, tests/testapp_serverless/metering_test.cc -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-07-06 08:48:47.000000000
MISMATCHED INLINE COMMENT
Line:1193, tests/testapp_serverless/metering_test.cc -> As per Slack discussion, this is "slow" as getRandomKey only returns items from collections with a non-zero item count, and collection item count is updated once items are flushed to disk.

If you wait for persistence (storeAndPersistItem) then it should work without retry.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-07-06 09:14:36.000000000
MISMATCHED INLINE COMMENT
Line:1193, tests/testapp_serverless/metering_test.cc -> Done
----------------------------------------------------------------------------------------------------------------------
